DesktopView: Don't call ensureWindowType on FocusIn event

Fixes desktop window losing the keep-below flag.

BUG: 365014

Differential Revision: https://phabricator.kde.org/D2121